2019-08-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	In calls to g_signal*(), do not cast object using
	G_OBJECT(object).

	The argument is a gpointer, so the cast is redundant.

	* libbalsa/address.c (libbalsa_address_get_edit_widget):
	* libbalsa/filter-funcs.c (libbalsa_filter_list_new):
	* libbalsa/folder-scanners.c (libbalsa_scanner_imap_dir),
	(imap_tree_scan):
	* libbalsa/identity.c (setup_ident_frame):
	* libbalsa/imap/imap-commands.c (imap_mbox_select_unlocked):
	* libbalsa/imap/imap-handle.c (imap_mbox_connect),
	(imap_mbox_handle_get_delim), (ir_list_lsub), (ir_exists),
	(ir_expunge):
	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_select_key):
	* libbalsa/libbalsa-progress.c
	(libbalsa_progress_dialog_ensure_real), (create_progress_widget):
	* libbalsa/libbalsa-vfs.c (libbalsa_vfs_mime_button):
	* libbalsa/macosx-helpers.c (libbalsa_macosx_menu),
	(libbalsa_macosx_menu_for_parent):
	* libbalsa/mailbox.c (libbalsa_mailbox_progress_notify):
	* libbalsa/mailbox_imap.c
	(libbalsa_mailbox_imap_get_selected_handle), (lbm_imap_check):
	* libbalsa/mailbox_pop3.c (libbalsa_mailbox_pop3_startup):
	* libbalsa/send.c (lbs_process_queue_init_session):
	* libbalsa/server.c (libbalsa_server_set_username),
	(libbalsa_server_set_host), (libbalsa_server_config_changed),
	(lbs_get_password):
	* libbalsa/smtp-server.c (libbalsa_smtp_server_dialog):
	* libinit_balsa/assistant_helper.c (balsa_init_add_grid_entry):
	* libinit_balsa/assistant_init.c (balsa_initdruid_apply),
	(balsa_initdruid):
	* libinit_balsa/assistant_page_defclient.c
	(balsa_druid_page_defclient_init):
	* libinit_balsa/assistant_page_directory.c
	(balsa_druid_page_directory_init):
	* libinit_balsa/assistant_page_user.c (balsa_druid_page_user):
	* libnetclient/net-client.c (net_client_start_tls):
	* libnetclient/test/tests.c (test_basic_crypt), (test_smtp),
	(test_pop3):
	* src/ab-main.c (bab_window_list_new), (bab_get_edit_button_box),
	(bab_get_filter_box), (bab_window_new), (main):